--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-01-18 13:05+0100\n"
-"PO-Revision-Date: 2018-01-18 11:21+0100\n"
+"POT-Creation-Date: 2018-01-19 14:38+0100\n"
+"PO-Revision-Date: 2018-01-19 14:39+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fr\n"
@@ -17,6 +17,14 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Generator: Poedit 1.8.7.1\n"
+
+#: models.py:59
+msgid "left"
+msgstr "gauche"
+
+#: models.py:59
+msgid "right"
+msgstr "droite"
 
 #: templates/coopfacevoice/Decision.html:11
 #, python-format
